--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,10 +1,28 @@
-README.md
-{{- if ne .chezmoi.os "linux"}}
+{{ if not .applyGit }}
+.gitconfig
+{{ end }}
+
+{{ if not .applyNeovim }}
+nvim-plugin-checking.sh
+nvim-plugin-install.sh
+.config/nvim
+{{ end }}
+
+{{ if not .applyTmux }}
+.tmux.conf
+tmux-checking.sh
+{{ end }}
+
+{{ if not .applyZsh }}
+zsh-checking.sh
+.zsh
+.zshrc
+.p10k.zsh
+{{ end }}
+
+{{- if ne .chezmoi.os "windows"}}
 .config/komorebi/komorebi.json
 {{- end}}
 
-{{- if ne .chezmoi.osRelease.name "Ubuntu"}}
-.chezmoiscripts
-{{- end}}
-
 key.txt.age
+README.md
