--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -20,8 +20,18 @@ zsh-checking.sh
 .p10k.zsh
 {{ end }}
 
-{{- if ne .chezmoi.os "windows"}}
+
+{{ if eq .osId "windows" }}
+
+{{ else }}
+
+.config/autohotkey/
+.config/autohotkey/**
 .config/komorebi/komorebi.json
-{{- end}}
+.config/scoop/
+.config/scoop/**
+.wslconfig
+
+{{ end }}
 
 key.txt.age
