fixed tmux allow-passthrough setting

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -37,7 +37,7 @@ bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 
 # Neovim specific options required
-set -gq allow-passthrough on
+set -g allow-passthrough on
 set-option -sg escape-time 10
 set-option -g focus-events on
 
