--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -42,20 +42,21 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @tmp_plugins '                   \
+  tmux-plugins/tpm                      \
+  tmux-plugins/tmux-sensible            \
+  christoomey/vim-tmux-navigator        \
+  erikw/tmux-powerline                  \
+'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# tmux-powerline
-set -g @plugin 'erikw/tmux-powerline'
 
 
 
